--- a/index.html
+++ b/index.html
@@ -232,11 +232,7 @@
         </h2>
         <div class="max-w-3xl mx-auto text-center">
           <div class="bg-white p-8 rounded-xl shadow-lg">
-            <img
-              src="../landing/images/klien.jpg"
-              alt="Foto Klien"
-              class="w-24 h-24 rounded-full mx-auto mb-4 border-4 border-sky-200"
-            />
+           <img src="images/klien.jpg" alt="Foto Klien" class="w-24 h-24 rounded-full mx-auto mb-4 border-4 border-sky-200">
             <p class="text-slate-600 italic mb-4">
               "Kerja sama dengan Daniel sangat memuaskan. Website yang dibuat
               tidak hanya bagus secara tampilan, tapi juga cepat dan fungsional.
