--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DanielDev</title>
 
-    <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
-
-    <!-- Tailwind CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind lokal -->
+    <script src="tailwind.js"></script>
 
     <!-- Font Awesome -->
     <link
@@ -22,14 +19,16 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-
     <style>
+      /* Smooth scroll */
       html {
         scroll-behavior: smooth;
       }
+      /* Custom scroll-margin-top to offset sticky nav */
       section {
-        scroll-margin-top: 4rem;
+        scroll-margin-top: 4rem; /* Sesuaikan dengan tinggi navbar */
       }
+      /* Animasi Fade-in */
       .fade-in-section {
         opacity: 0;
         transform: translateY(20px);
@@ -48,12 +47,22 @@
     >
       <div class="container mx-auto flex justify-between items-center">
         <a href="#" class="text-2xl font-bold">DanielDev</a>
+        <!-- Menu Desktop -->
         <div id="menu-desktop" class="hidden md:flex space-x-6">
-          <a href="#layanan" class="hover:text-sky-400 transition-colors">Layanan</a>
-          <a href="#keahlian" class="hover:text-sky-400 transition-colors">Keahlian</a>
-          <a href="#testimoni" class="hover:text-sky-400 transition-colors">Testimoni</a>
-          <a href="#kontak" class="hover:text-sky-400 transition-colors">Kontak</a>
+          <a href="#layanan" class="hover:text-sky-400 transition-colors"
+            >Layanan</a
+          >
+          <a href="#keahlian" class="hover:text-sky-400 transition-colors"
+            >Keahlian</a
+          >
+          <a href="#testimoni" class="hover:text-sky-400 transition-colors"
+            >Testimoni</a
+          >
+          <a href="#kontak" class="hover:text-sky-400 transition-colors"
+            >Kontak</a
+          >
         </div>
+        <!-- Tombol Hamburger (Mobile) -->
         <div class="md:hidden">
           <button id="menu-btn" class="text-white focus:outline-none">
             <i class="fas fa-bars text-2xl"></i>
@@ -63,25 +72,42 @@
     </nav>
 
     <!-- Hero Section -->
-    <header id="hero" class="bg-slate-800 text-white py-16 md:py-24 text-center">
+    <header
+      id="hero"
+      class="bg-slate-800 text-white py-16 md:py-24 text-center"
+    >
+      <!-- Menu Mobile (Hidden by default) -->
       <div
         id="menu-mobile"
         class="hidden md:hidden absolute top-16 left-0 w-full bg-slate-800 text-white"
       >
-        <a href="#layanan" class="block py-2 px-4 hover:bg-slate-700">Layanan</a>
-        <a href="#keahlian" class="block py-2 px-4 hover:bg-slate-700">Keahlian</a>
-        <a href="#testimoni" class="block py-2 px-4 hover:bg-slate-700">Testimoni</a>
+        <a href="#layanan" class="block py-2 px-4 hover:bg-slate-700"
+          >Layanan</a
+        >
+        <a href="#keahlian" class="block py-2 px-4 hover:bg-slate-700"
+          >Keahlian</a
+        >
+        <a href="#testimoni" class="block py-2 px-4 hover:bg-slate-700"
+          >Testimoni</a
+        >
         <a href="#kontak" class="block py-2 px-4 hover:bg-slate-700">Kontak</a>
       </div>
 
       <div class="container mx-auto px-4">
-        <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold mb-4 tracking-tight">
+        <h1
+          class="text-4xl sm:text-5xl md:text-6xl font-extrabold mb-4 tracking-tight"
+        >
           DanielDev
         </h1>
         <div class="h-12">
-          <p class="text-lg md:text-2xl text-sky-400 font-medium" id="typing-effect"></p>
+          <p
+            class="text-lg md:text-2xl text-sky-400 font-medium"
+            id="typing-effect"
+          ></p>
         </div>
-        <p class="text-base sm:text-lg md:text-xl max-w-3xl mx-auto text-slate-300">
+        <p
+          class="text-base sm:text-lg md:text-xl max-w-3xl mx-auto text-slate-300"
+        >
           Halo, saya <strong>Daniel Simamora</strong>. Saya siap membantu Anda
           membangun website yang modern, responsif, dan fungsional.
         </p>
@@ -130,7 +156,8 @@
               Toko Online (E-Commerce)
             </h3>
             <p class="text-slate-600">
-              Solusi platform jual beli online yang cepat, aman, dan mudah dikelola.
+              Solusi platform jual beli online yang cepat, aman, dan mudah
+              dikelola.
             </p>
           </div>
 
@@ -154,6 +181,49 @@
       </div>
     </section>
 
+    <!-- Keahlian Section -->
+    <section id="keahlian" class="py-16 md:py-20 bg-white fade-in-section">
+      <div class="container mx-auto px-4">
+        <h2 class="text-3xl font-bold text-center mb-12 text-slate-800">
+          Keahlian Saya
+        </h2>
+        <div
+          class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 text-center"
+        >
+          <!-- Skill 1 -->
+          <div class="flex flex-col items-center">
+            <i class="fab fa-html5 text-5xl text-orange-500 mb-2"></i>
+            <p class="font-semibold">HTML5</p>
+          </div>
+          <!-- Skill 2 -->
+          <div class="flex flex-col items-center">
+            <i class="fab fa-css3-alt text-5xl text-blue-500 mb-2"></i>
+            <p class="font-semibold">CSS3</p>
+          </div>
+          <!-- Skill 3 -->
+          <div class="flex flex-col items-center">
+            <i class="fab fa-js-square text-5xl text-yellow-500 mb-2"></i>
+            <p class="font-semibold">JavaScript</p>
+          </div>
+          <!-- Skill 4 -->
+          <div class="flex flex-col items-center">
+            <i class="fab fa-java text-5xl text-red-500 mb-2"></i>
+            <p class="font-semibold">Java</p>
+          </div>
+          <!-- Skill 5 -->
+          <div class="flex flex-col items-center">
+            <i class="fas fa-database text-5xl text-sky-700 mb-2"></i>
+            <p class="font-semibold">MySQL</p>
+          </div>
+          <!-- Skill 6 -->
+          <div class="flex flex-col items-center">
+            <i class="fas fa-network-wired text-5xl text-slate-600 mb-2"></i>
+            <p class="font-semibold">Networking</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Testimoni Section -->
     <section id="testimoni" class="py-16 md:py-20 bg-slate-100 fade-in-section">
       <div class="container mx-auto px-4">
@@ -162,13 +232,11 @@
         </h2>
         <div class="max-w-3xl mx-auto text-center">
           <div class="bg-white p-8 rounded-xl shadow-lg">
-            <img
-              src="images/klien.jpg"
-              alt="Foto Klien"
-              class="w-24 h-24 rounded-full mx-auto mb-4 border-4 border-sky-200"
-            />
+          <img src="images/klien.jpg" alt="Foto Klien" class="w-24 h-24 rounded-full mx-auto mb-4 border-4 border-sky-200">
             <p class="text-slate-600 italic mb-4">
-              "Kerja sama dengan Daniel sangat memuaskan. Website yang dibuat tidak hanya bagus secara tampilan, tapi juga cepat dan fungsional. Sangat direkomendasikan!"
+              "Kerja sama dengan Daniel sangat memuaskan. Website yang dibuat
+              tidak hanya bagus secara tampilan, tapi juga cepat dan fungsional.
+              Sangat direkomendasikan!"
             </p>
             <p class="font-bold text-slate-800">Klien Fiktif</p>
             <p class="text-sm text-slate-500">CEO Perusahaan Keren</p>
@@ -177,10 +245,60 @@
       </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section id="faq" class="py-16 md:py-20 bg-white fade-in-section">
+      <div class="container mx-auto px-4 max-w-4xl">
+        <h2 class="text-3xl font-bold text-center mb-12 text-slate-800">
+          Pertanyaan yang Sering Diajukan (FAQ)
+        </h2>
+        <div class="space-y-4">
+          <!-- FAQ 1 -->
+          <details class="group bg-slate-50 p-4 rounded-lg cursor-pointer">
+            <summary
+              class="flex justify-between items-center font-semibold text-slate-800"
+            >
+              Berapa lama waktu pengerjaan sebuah website?
+              <i
+                class="fas fa-chevron-down transition-transform duration-300 group-open:rotate-180"
+              ></i>
+            </summary>
+            <p class="text-slate-600 mt-4">
+              Waktu pengerjaan sangat bervariasi tergantung pada kompleksitas
+              proyek. Untuk website profil perusahaan sederhana, biasanya memakan
+              waktu 1-2 minggu. Untuk toko online atau sistem yang lebih
+              kompleks, bisa memakan waktu 1 bulan atau lebih.
+            </p>
+          </details>
+          <!-- FAQ 2 -->
+          <details class="group bg-slate-50 p-4 rounded-lg cursor-pointer">
+            <summary
+              class="flex justify-between items-center font-semibold text-slate-800"
+            >
+              Apakah saya bisa mengelola konten website sendiri nanti?
+              <i
+                class="fas fa-chevron-down transition-transform duration-300 group-open:rotate-180"
+              ></i>
+            </summary>
+            <p class="text-slate-600 mt-4">
+              Tentu saja. Saya bisa membangun website menggunakan Content
+              Management System (CMS) seperti WordPress, atau membuatkan panel
+              admin khusus yang mudah digunakan sehingga Anda bisa memperbarui
+              konten tanpa perlu keahlian koding.
+            </p>
+          </details>
+        </div>
+      </div>
+    </section>
+
     <!-- Kontak Section -->
-    <section id="kontak" class="py-16 md:py-20 bg-slate-800 text-white fade-in-section">
+    <section
+      id="kontak"
+      class="py-16 md:py-20 bg-slate-800 text-white fade-in-section"
+    >
       <div class="container mx-auto px-4 text-center">
-        <h2 class="text-3xl sm:text-4xl font-bold mb-4">Tertarik Bekerja Sama?</h2>
+        <h2 class="text-3xl sm:text-4xl font-bold mb-4">
+          Tertarik Bekerja Sama?
+        </h2>
         <p class="max-w-xl mx-auto text-slate-300 mb-8">
           Siap untuk memulai proyek Anda? Hubungi saya melalui:
         </p>
@@ -193,12 +311,20 @@
       </div>
     </section>
 
+    <!-- Tombol Kembali ke Atas -->
+    <button
+      id="to-top-btn"
+      class="hidden fixed bottom-5 right-5 bg-sky-500 text-white w-12 h-12 rounded-full shadow-lg hover:bg-sky-600 transition-all duration-300"
+    >
+      <i class="fas fa-arrow-up"></i>
+    </button>
+
     <footer class="bg-slate-900 text-slate-400 text-center p-6">
       <p>&copy; 2024 Daniel Simamora. Dibuat dengan Tailwind CSS.</p>
     </footer>
 
-    <!-- Script -->
     <script>
+      // --- Fungsionalitas Menu Mobile ---
       const menuBtn = document.getElementById("menu-btn");
       const menuMobile = document.getElementById("menu-mobile");
 
@@ -206,13 +332,83 @@
         menuMobile.classList.toggle("hidden");
       });
 
+      // Tutup menu jika link di klik
       document.querySelectorAll("#menu-mobile a").forEach((link) => {
         link.addEventListener("click", () => {
           menuMobile.classList.add("hidden");
         });
       });
 
-      // Efek Mengetik
+      // --- Fungsionalitas Tombol Kembali ke Atas ---
+      const toTopBtn = document.getElementById("to-top-btn");
+
+      window.addEventListener("scroll", () => {
+        if (
+          document.body.scrollTop > 100 ||
+          document.documentElement.scrollTop > 100
+        ) {
+          toTopBtn.classList.remove("hidden");
+        } else {
+          toTopBtn.classList.add("hidden");
+        }
+      });
+
+      toTopBtn.addEventListener("click", () => {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      });
+
+      // --- Fungsionalitas Animasi Scroll ---
+      const sections = document.querySelectorAll(".fade-in-section");
+      const observer = new IntersectionObserver(
+        (entries) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              entry.target.classList.add("is-visible");
+            }
+          });
+        },
+        { threshold: 0.1 }
+      );
+
+      sections.forEach((section) => {
+        observer.observe(section);
+      });
+
+      // --- Fungsionalitas Animasi Angka (Counter) ---
+      function animateCounters() {
+        const counters = document.querySelectorAll(".counter-value");
+        const speed = 200; // Kecepatan animasi
+
+        counters.forEach((counter) => {
+          const updateCount = () => {
+            const target = +counter.getAttribute("data-target");
+            const count = +counter.innerText;
+            const increment = target / speed;
+
+            if (count < target) {
+              counter.innerText = Math.ceil(count + increment);
+              setTimeout(updateCount, 15);
+            } else {
+              counter.innerText = target;
+            }
+          };
+          updateCount();
+        });
+      }
+
+      const statsSection = document.getElementById("statistik");
+      const statsObserver = new IntersectionObserver((entries) => {
+        if (entries[0].isIntersecting) {
+          animateCounters();
+          statsObserver.unobserve(statsSection); // Hentikan observasi setelah animasi berjalan
+        }
+      }, { threshold: 0.5 });
+
+      if (statsSection) {
+        statsObserver.observe(statsSection);
+      }
+
+      // --- Fungsionalitas Efek Mengetik ---
       const typingElement = document.getElementById("typing-effect");
       const words = ["Website Modern.", "Toko Online Cepat.", "Blog Pribadi."];
       let wordIndex = 0;
