--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DanielDev</title>
 
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.png" type="image/png" sizes="32x32" />
+    <link rel="apple-touch-icon" href="favicon.png" />
+
     <!-- Tailwind lokal -->
     <script src="tailwind.js"></script>
 
-    <!-- Font Awesome -->
+    <!-- Font Awesome (CDN) -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -38,11 +43,16 @@
         opacity: 1;
         transform: translateY(0);
       }
+      /* Custom class for hero section background */
+      .hero-bg {
+        background: linear-gradient(to right, #1e293b, #0f172a);
+      }
     </style>
   </head>
   <body class="font-sans bg-slate-50 text-slate-800 min-h-screen">
     <!-- Navbar -->
     <nav
+      id="navbar"
       class="bg-slate-800/80 backdrop-blur-lg text-white p-4 sticky top-0 z-50 shadow-md"
     >
       <div class="container mx-auto flex justify-between items-center">
@@ -72,10 +82,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <header
-      id="hero"
-      class="bg-slate-800 text-white py-16 md:py-24 text-center"
-    >
+    <header id="hero" class="hero-bg text-white py-20 md:py-28 text-center">
       <!-- Menu Mobile (Hidden by default) -->
       <div
         id="menu-mobile"
@@ -113,7 +120,7 @@
         </p>
         <a
           href="#kontak"
-          class="mt-8 md:mt-10 inline-block bg-sky-500 text-white px-6 py-3 sm:px-8 rounded-full font-semibold shadow-lg hover:bg-sky-600 transition-all duration-300 transform hover:scale-105"
+          class="mt-8 md:mt-10 inline-block bg-sky-500 text-white px-8 py-3 rounded-full font-semibold shadow-lg hover:bg-sky-600 transition-all duration-300 transform hover:scale-105"
         >
           Hubungi Saya
         </a>
@@ -121,7 +128,7 @@
     </header>
 
     <!-- Layanan Section -->
-    <section id="layanan" class="py-16 md:py-20 bg-slate-100 fade-in-section">
+    <section id="layanan" class="py-20 md:py-24 bg-slate-100 fade-in-section">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-12 text-slate-800">
           Layanan yang Saya Tawarkan
@@ -182,7 +189,7 @@
     </section>
 
     <!-- Keahlian Section -->
-    <section id="keahlian" class="py-16 md:py-20 bg-white fade-in-section">
+    <section id="keahlian" class="py-20 md:py-24 bg-white fade-in-section">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-12 text-slate-800">
           Keahlian Saya
@@ -225,14 +232,18 @@
     </section>
 
     <!-- Testimoni Section -->
-    <section id="testimoni" class="py-16 md:py-20 bg-slate-100 fade-in-section">
+    <section id="testimoni" class="py-20 md:py-24 bg-slate-100 fade-in-section">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-12 text-slate-800">
           Kata Mereka Tentang Saya
         </h2>
         <div class="max-w-3xl mx-auto text-center">
           <div class="bg-white p-8 rounded-xl shadow-lg">
-          <img src="images/klien.jpg" alt="Foto Klien" class="w-24 h-24 rounded-full mx-auto mb-4 border-4 border-sky-200">
+            <img
+              src="images/klien.jpg"
+              alt="Foto Klien"
+              class="w-24 h-24 rounded-full mx-auto mb-4 border-4 border-sky-200"
+            />
             <p class="text-slate-600 italic mb-4">
               "Kerja sama dengan Daniel sangat memuaskan. Website yang dibuat
               tidak hanya bagus secara tampilan, tapi juga cepat dan fungsional.
@@ -246,7 +257,7 @@
     </section>
 
     <!-- FAQ Section -->
-    <section id="faq" class="py-16 md:py-20 bg-white fade-in-section">
+    <section id="faq" class="py-20 md:py-24 bg-white fade-in-section">
       <div class="container mx-auto px-4 max-w-4xl">
         <h2 class="text-3xl font-bold text-center mb-12 text-slate-800">
           Pertanyaan yang Sering Diajukan (FAQ)
@@ -264,8 +275,8 @@
             </summary>
             <p class="text-slate-600 mt-4">
               Waktu pengerjaan sangat bervariasi tergantung pada kompleksitas
-              proyek. Untuk website profil perusahaan sederhana, biasanya memakan
-              waktu 1-2 minggu. Untuk toko online atau sistem yang lebih
+              proyek. Untuk website profil perusahaan sederhana, biasanya
+              memakan waktu 1-2 minggu. Untuk toko online atau sistem yang lebih
               kompleks, bisa memakan waktu 1 bulan atau lebih.
             </p>
           </details>
@@ -304,7 +315,7 @@
         </p>
         <a
           href="mailto:danielsimamora@del.com"
-          class="inline-block bg-sky-500 text-white px-6 py-3 sm:px-8 rounded-full font-semibold shadow-lg hover:bg-sky-600 transition-all duration-300 transform hover:scale-105"
+          class="inline-block bg-sky-500 text-white px-8 py-3 rounded-full font-semibold shadow-lg hover:bg-sky-600 transition-all duration-300 transform hover:scale-105"
         >
           <i class="fas fa-envelope mr-2"></i> danielsimamora@del.com
         </a>
@@ -327,6 +338,7 @@
       // --- Fungsionalitas Menu Mobile ---
       const menuBtn = document.getElementById("menu-btn");
       const menuMobile = document.getElementById("menu-mobile");
+      const navbar = document.getElementById("navbar");
 
       menuBtn.addEventListener("click", () => {
         menuMobile.classList.toggle("hidden");
@@ -338,6 +350,14 @@
           menuMobile.classList.add("hidden");
         });
       });
+
+      // --- Fungsionalitas Tombol Kembali ke Atas ---
+      // Sesuaikan offset scroll-margin-top dengan tinggi navbar
+      const navbarHeight = navbar.offsetHeight;
+      document.documentElement.style.setProperty(
+        "--scroll-margin-top",
+        navbarHeight + "px"
+      );
 
       // --- Fungsionalitas Tombol Kembali ke Atas ---
       const toTopBtn = document.getElementById("to-top-btn");
@@ -397,12 +417,15 @@
       }
 
       const statsSection = document.getElementById("statistik");
-      const statsObserver = new IntersectionObserver((entries) => {
-        if (entries[0].isIntersecting) {
-          animateCounters();
-          statsObserver.unobserve(statsSection); // Hentikan observasi setelah animasi berjalan
-        }
-      }, { threshold: 0.5 });
+      const statsObserver = new IntersectionObserver(
+        (entries) => {
+          if (entries[0].isIntersecting) {
+            animateCounters();
+            statsObserver.unobserve(statsSection); // Hentikan observasi setelah animasi berjalan
+          }
+        },
+        { threshold: 0.5 }
+      );
 
       if (statsSection) {
         statsObserver.observe(statsSection);
